fixed overflow with new canvas text, and clears text on send

--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,20 @@
 
 .App--CanvasOverlayText{
     position:absolute;
-    top:50%;
-    left:50%;
+    top:0;
+    left:0;
     z-index: 2;
+
+    line-height: 30px;
+    padding-left: 5px;
+    overflow:hidden;
+    white-space: pre-line;
+
+    overflow-wrap: break-word;
+    word-break: break-word;
+
+    /* bg wont go invis :( */
+    background-color: transparent;
 }
 
 /* BIG STYLES */
